# jvm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
classfile/: Cargo.toml
classfile/src/: attribute.rs  class_file.rs  constant.rs  errors.rs  field.rs  lib.rs  method.rs
classfile/tests/: HelloWorld.java
data/docs/: README.md
docs/: README.md
jvm/: Cargo.toml
jvm-macros/: Cargo.toml
jvm/src/: interpreter.rs  main.rs
jvm/src/classpath/: entry.rs  mod.rs
jvm/src/instructions/: mod.rs  opcode.rs
jvm/src/instructions/comparisons/: dcmp.rs  fcmp.rs  if_acmp.rs  if_icmp.rs  ifcond.rs  lcmp.rs  mod.rs
jvm/src/instructions/constants/: const.rs  ipush.rs  mod.rs
jvm/src/instructions/control/: goto.rs  mod.rs  switch.rs
jvm/src/instructions/conversions/: d2x.rs  f2x.rs  i2x.rs  l2x.rs  mod.rs
jvm/src/instructions/extended/: goto_w.rs  ifnull.rs  mod.rs  wide.rs
jvm/src/instructions/loads/: aload.rs  dload.rs  fload.rs  iload.rs  lload.rs  mod.rs
jvm/src/instructions/math/: add.rs  and.rs  div.rs  iinc.rs  mod.rs  mul.rs  neg.rs  or.rs  rem.rs  sh.rs  sub.rs  xor.rs
jvm/src/instructions/refs/: check_cast.rs  get_field.rs  get_static.rs  instance_of.rs  ldc.rs  mod.rs  new.rs  put_field.rs  put_static.rs
jvm/src/instructions/stack/: dup.rs  mod.rs  pop.rs  swap.rs
jvm/src/instructions/stores/: astore.rs  dstore.rs  fstore.rs  istore.rs  lstore.rs  mod.rs
jvm/src/rtda/: mod.rs  object.rs  thread.rs
jvm/src/rtda/heap/: access_flags.rs  class.rs  class_loader.rs  constant_pool.rs  field.rs  method.rs  mod.rs  object.rs
(+4 files in other folders)
