[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile = { path = "../classfile" }
zip = "0.5.13"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
anyhow = "1"
thiserror = "1"